Updates form handling and data storage
Changes element IDs and form submission logic
Adds date range storage functionality
Replaces script inclusion in HTML files

Improves user experience and data accuracy

--- a/entrai.html
+++ b/entrai.html
@@ -35,9 +35,8 @@
         <h2>Quantidade de faltas:</h2>
         <input type="number" id="faltas" name="faltas" required>
         <br><br>
-        <input type="submit" value="Calcular" >
+        <input type="submit" value="Próximo" >
     </form>
     <script src="./dados.js"></script> 
-    <script src="./script.js"></script>
 </body>
 </html>
