--- a/exitcode.html
+++ b/exitcode.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <h1>Cálculo de Métricas</h1>
-    <form id="inputTurma" style="user-select: none;">
+    <form id="inputData" style="user-select: none;">
         <h2>Datas do período:</h2>
         <input type="date" id="dataInicio" name="dataInicio" required>
         <p>Até:</p>
         <input type="date" id="dataFim" name="dataFim" required>
+        <input type="submit" value="Calcular">
     </form>
     <script src="./script.js"></script>
 </body>
